# AdventOfCode-Solutions

./: .gitignore  README.md  format.sh  generate_year.sh  intcode.py  output  rename.py  template.py
2015/day1/: puzzle.py
2015/day2/: puzzle.py
2020/day1/: puzzle1.py
2020/day10/: part1.py
2020/day11/: part1.py
2020/day12/: part1.py
2020/day2/: puzzle2.py
2020/day3/: puzzle3.py
2020/day4/: puzzle4.py
2020/day5/: puzzle5.py
2020/day6/: puzzle6.py
2020/day7/: part1.py  part2.py
2020/day8/: part1.py
2020/day9/: part1.py
2021/03/: test.py
2021/04/: 04.py
2021/05/: 05.py
2021/06/: 06.py  input.txt
2021/07/: 07.py  algo.tex
2021/08/: 08.py
2021/09/: 09.py
2021/10/: 10.py
2021/11/: 11.py
2021/12/: 12.py
2021/13/: 13.py  foldcode.py  input.txt
2021/14/: 14.py
2021/15/: 15.py
2022/: pyproject.toml
2022/01/: 01.py  day1.c
2022/01/d1/: main
2022/01/d1/src/: main  main.rs
2022/02/: 02.py
2022/03/: 03.py
2022/04/: 04.py
2022/05/: 05.py  stack.txt
2022/06/: 06.py
2022/07/: 07.py
2022/08/: 08.py
2022/09/: 09.py
2022/10/: 10.py
2022/11/: 11.py
2022/12/: 12.cpp  12.py
2022/13/: 13.py  out.txt
2022/14/: 14.py
2022/15/: 15.py
2022/16/: 16.py
2022/16/d16/: Cargo.toml
2022/16/d16/src/: main.rs
2022/17/d17/src/: main.rs
2022/19/d19/src/: main.rs
2022/20/src/: main.rs
2022/21/: 21.py
2022/21/src/: main.rs
2022/day1/: day1.py
2022/day3/: day3.c
2022/day4/: day4.py
2022/day5/: day5.py
2022/day6/: day6.py
2022/day7/: day7.py
aoc/: README.md  pyproject.toml
aoc/src/: aoc.py
(+44 files in other folders)
